--- a/vite-project/src/assets/App.css
+++ b/vite-project/src/assets/App.css
@@ -33,3 +33,111 @@ img {
   margin-top: 460px;
   text-transform: capitalize;
 }
+
+/*Medias */
+
+@media only screen and (max-width: 1400px) {
+  .card-temp {
+    position: absolute;
+    padding-left: 33px;
+    margin-top: 320px;
+    font-size: 50px;
+  }
+  .card-desc {
+    position: absolute;
+    padding-left: 20px;
+    margin-top: 400px;
+    text-transform: capitalize;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .card-temp {
+    position: absolute;
+    padding-left: 33px;
+    margin-top: 260px;
+    font-size: 50px;
+  }
+  .card-desc {
+    position: absolute;
+    padding-left: 20px;
+    margin-top: 325px;
+    text-transform: capitalize;
+  }
+  .imagen {
+    height: 403px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .imagen {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .card-desc {
+    position: absolute;
+    padding-left: 20px;
+    margin-top: 260px;
+  }
+  .card-temp {
+    position: absolute;
+
+    margin-top: 200px;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .card-desc {
+    position: absolute;
+    padding-left: 20px;
+    margin-top: 260px;
+  }
+  .card-temp {
+    position: absolute;
+
+    margin-top: 200px;
+  }
+}
+
+/* CSS */
+.buttonn-27 {
+  appearance: none;
+  background-color: #3d6d8f;
+  border: none;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+
+  min-height: 60px;
+
+  padding: 6px 12px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+
+  will-change: transform;
+}
+
+.buttonn-27:disabled {
+  pointer-events: none;
+}
+
+.buttonn-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.buttonn-27:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
